<resources>
    <string name="app_name">memeable</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Add</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_message">Pesan</string>
    <string name="title_favorit">Favorit</string>
</resources>
